--- a/Online Shop/Index.html
+++ b/Online Shop/Index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html data-bs-theme="light" lang="sr">
 <head>
+    <title>Dobro došli - Shopy</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Dobro došli! - Shopy</title>
     <link rel="stylesheet" href="Content/bootstrap.min.css">
     <link href="Content/shopy.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.7.0.min.js"></script>
@@ -16,7 +16,7 @@
     <script src="Scripts/api/products/products-main.js"></script>
     <script src="Scripts/loader-finisher.js"></script>
 </head>
-<body class="d-none">
+<body class="d-none bsp">
     <div id="nm"></div>
     <div class="container body-content mt-4">
         <div class="container">
@@ -24,7 +24,6 @@
                 <div class="col-lg-12 mx-auto">
                     <h3 class="text-dark mt-4">Shopy eCommerce</h3>
                     <p class="fw-normal pb-3" style="letter-spacing: 1px;">Ispred Vas je celokupna ponuda proizvoda na platformi. Shopy Team Vam želi ugodnu kupovinu!</p>
-
                     <form class="col-12 mb-3">
                         <div class="row">
                             <div class="col-3">
@@ -53,12 +52,11 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="pt-2 mb-2">
-                                <button id="pretragabtn" type="button" class="btn btn-dark btn-block fs-5">🔎 Pretraga proizvoda</button>
-                                &emsp;<button id="ponistibtn" type="reset" class="btn btn-secondary fs-5 btn-block">↺ Resetovanje pretrage</button>
+                            <div class="pt-4 pb-4 mb-2 col-12 d-flex justify-content-end">
+                                <button id="pretragabtn" type="button" class="btn btn-dark col-3 btn-block fs-5">🔎 Pretraga proizvoda</button>
+                                &emsp;<button id="ponistibtn" type="reset" class="btn btn-secondary col-3 fs-5 btn-block">↺ Resetovanje pretrage</button>
                             </div>
                         </div>
-
                         <div id="divgreske" class="alert alert-dark d-flex align-items-center mb-3 mt-5" role="alert">
                             <svg height="25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
@@ -86,9 +84,7 @@
                             </div>
                         </div>
                     </form>
-                    <div id="proizvodi">
-                        <!-- Ucitani proizvodi -->
-                    </div>
+                    <div id="proizvodi"></div>
                 </div>
             </div>
         </div>
