seperate static and js

--- a/Online Shop/Brisanje.html
+++ b/Online Shop/Brisanje.html
@@ -4,81 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Brisanje Korisnika - Shopy</title>
-    <link rel="stylesheet" href="Content/bootstrap.min.css">
     <script src="Scripts/jquery-3.7.0.min.js"></script>
-    <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/bootstrap.bundle.min.js"></script>
-    <script src="Scripts/modernizr-2.8.3.js"></script>
-    <script>
-        // ako je ulogovan, prebaci ga na index - slucaj da ide na back opciju
-        $.ajax({
-            url: "/api/auth/Ulogovan",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                if (response != null) {
-                    if (JSON.parse(response).Kod !== 0) // korisnik je ulogovan, ne moze da se registruje
-                    {
-                        window.location.href = "Index.html";
-                    }
-                }
-            }
-        });
-
-        // ako je ulogovan, prebaci prikazi meni u zavisnoti od uloge
-        $.ajax({
-            url: "/api/auth/AuthKorisnik",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                var data = JSON.parse(response);
-                if (data.KorisnickoIme !== "") {
-                    // prikazi podatke i promeni meni
-                    // sakri dugmice za login i register
-                    $(function () {
-                        // Prikazi samo dugmice vezane za korisnika koji ima datu ulogu
-                        var uloga = data.Uloga;
-
-                        if (uloga !== 2) {
-                            // nije pitanju administrator - povratak na pocetnu stranicu
-                            window.location.href = "MojProfil.html";
-                        }
-
-                        // id iz url
-                        let searchParams = new URLSearchParams(window.location.search)
-                        var Id = searchParams.get('id');
-
-                        // obrisi korisnika po id
-                        $.ajax({
-                            url: "/api/users/BrisanjeKorisnika",
-                            type: "POST",
-                            data: JSON.stringify({
-                                id: Id
-                            }),
-                            async: false,
-                            cache: false,
-                            dataType: "json",
-                            contentType: "application/json; charset=utf-8",
-                            success: function (response) {
-                                var data = JSON.parse(response);
-
-                                window.location.href = "ListaKorisnika.html?msg=" + data.Poruka;
-                            }
-                        });
-                    });
-                }
-
-            }
-        });
-
-
-    </script>
+    <script src="Scripts/api/users/delete-user.js"></script>
 </head>
 <body>
 </body>
