--- a/Online Shop/Brisanje.html
+++ b/Online Shop/Brisanje.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html data-bs-theme="light">
+<html data-bs-theme="light" lang="sr">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
